cmake_minimum_required(VERSION 3.26)
project(TEST VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_OUTPUT_PATH ${EXEC_PATH})
find_package(GTest REQUIRED)
include_directories(${HEAD_PATH})
link_directories(${LIB_PATH})
file(GLOB SRC_LIST ./*.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
link_libraries(json ${GTEST_LIBRARIES})
add_executable(unit_test ${SRC_LIST})
target_link_libraries(unit_test pthread)